# Exametrics

./: .gitignore  README.md  Rapport Projet LIDAR v0.2.odt
Python/: CreateConenonoisetemperature.py  In Plugin  conefilenonoise.las  exa.py  exa3.py
qExametrics/: CMakeLists.txt  ccExaLog.cpp  ccExaLog.h  ccExaWorker.cpp  ccExaWorker.h  ccExametrics.cpp  ccExametrics.h  ccExametricsDialog.cpp  ccExametricsDialog.h  exametricsDialog.ui  qExametrics.qrc  utils.cpp  utils.h
qExametrics/scripts/: exa.py
